fix MyFriends width on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -350,7 +350,7 @@ body ::-webkit-scrollbar-thumb {
 
 @media only screen and (max-width: 952px) {
   body .MyFriends {
-    padding: 0 16px 64px 16px;
+    padding: 0 16px;
   }
 }
 
