--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -10,6 +10,7 @@ footer {
   font-size: 14px;
   color: rgb(115, 115, 115);
   padding: 0 16px;
+  box-sizing: border-box;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.263);
 }
 
