--- a/src/styles/MyFriends.css
+++ b/src/styles/MyFriends.css
@@ -31,7 +31,7 @@
   grid-column: 1 / -1;
   height: 1px;
   background-color: lightgray;
-  width: min(calc(100% + 40px), 1082px);
+  width: min(calc(100% + 40px), 1082px, 100vw);
   margin-left: -20px;
   margin-top: 24px;
 }
